--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>850</width>
-    <height>526</height>
+    <width>1009</width>
+    <height>644</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Send Coins</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">color: rgb(46, 52, 54);
+background-color: rgb(255, 255, 255);</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0,0">
    <property name="bottomMargin">
@@ -104,7 +108,8 @@
           <item>
            <widget class="QPushButton" name="pushButtonCoinControl">
             <property name="styleSheet">
-             <string notr="true"/>
+             <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
             </property>
             <property name="text">
              <string>Inputs...</string>
@@ -587,8 +592,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>830</width>
-        <height>104</height>
+        <width>989</width>
+        <height>185</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1">
@@ -737,6 +742,10 @@
               </item>
               <item>
                <widget class="QPushButton" name="buttonChooseFee">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+                </property>
                 <property name="text">
                  <string>Choose...</string>
                 </property>
@@ -761,14 +770,14 @@
           </item>
           <item>
            <widget class="QLabel" name="fallbackFeeWarningLabel">
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
             <property name="toolTip">
              <string>Using the fallbackfee can result in sending a transaction that will take several hours or days (or never) to confirm. Consider choosing your fee manually or wait until your have validated the complete chain.</string>
-            </property>
-            <property name="font">
-            <font>
-                <weight>75</weight>
-                <bold>true</bold>
-            </font>
             </property>
             <property name="text">
              <string>Warning: Fee estimation is currently not possible.</string>
@@ -798,6 +807,10 @@
            <widget class="QPushButton" name="buttonMinimizeFee">
             <property name="toolTip">
              <string>collapse fee-settings</string>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
             </property>
             <property name="text">
              <string>Hide</string>
@@ -1214,6 +1227,10 @@
        <property name="toolTip">
         <string>Confirm the send action</string>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+       </property>
        <property name="text">
         <string>S&amp;end</string>
        </property>
@@ -1236,6 +1253,10 @@
        <property name="toolTip">
         <string>Clear all fields of the form.</string>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+       </property>
        <property name="text">
         <string>Clear &amp;All</string>
        </property>
@@ -1248,6 +1269,10 @@
       <widget class="QPushButton" name="addButton">
        <property name="toolTip">
         <string>Send to multiple recipients at once</string>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
        </property>
        <property name="text">
         <string>Add &amp;Recipient</string>
@@ -1321,6 +1346,12 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
          </property>
          <property name="cursor">
           <cursorShape>IBeamCursor</cursorShape>
