--- a/src/qt/forms/receiverequestdialog.ui
+++ b/src/qt/forms/receiverequestdialog.ui
@@ -71,6 +71,10 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="btnCopyURI">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+       </property>
        <property name="text">
         <string>Copy &amp;URI</string>
        </property>
@@ -81,6 +85,10 @@
      </item>
      <item>
       <widget class="QPushButton" name="btnCopyAddress">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+       </property>
        <property name="text">
         <string>Copy &amp;Address</string>
        </property>
@@ -91,6 +99,10 @@
      </item>
      <item>
       <widget class="QPushButton" name="btnSaveAs">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+       </property>
        <property name="text">
         <string>&amp;Save Image...</string>
        </property>
@@ -114,6 +126,10 @@
      </item>
      <item>
       <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(39, 43, 52);
+color: rgb(238, 238, 236);</string>
+       </property>
        <property name="standardButtons">
         <set>QDialogButtonBox::Close</set>
        </property>
