--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -40,14 +40,14 @@ color:#333;
 }
 
 QToolBar {
-background-color:#2f2b1b;
+background-color:#272b34;
 border:0px solid #000;
 padding:0;
 margin:0;
 }
 
 QToolBar > QToolButton {
-background-color:#2f2b1b;
+background-color:#272b34;
 border:0px solid #333;
 min-height:2.5em;
 padding: 0em 1em;
@@ -69,11 +69,12 @@ background-color:#F8F6F6;
 
 QLabel { /* Base Text Size & Color */
 font-size:12px;
-color:#333333;
+color:#8c763f;
 }
 
 .QCheckBox { /* Checkbox Labels */
-color:#333333;
+color:#8c763f;
+background-color:transparent;
 }
 
 .QCheckBox:hover {
@@ -100,7 +101,7 @@ background-color:#f2f2f2;
 /*******************************************************/
 
 QPushButton { /* Global Button Style */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #3f2b1a, stop: .1 #2f2b1b, stop: .95 #2f2b1b, stop: 1 #2f2b1b);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f8c64b, stop: .1 #272b34, stop: .95 #272b34, stop: 1 #272b34);
 border:0;
 border-radius:3px;
 color:#ffffff;
@@ -113,7 +114,7 @@ padding-bottom:5px;
 }
 
 QPushButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #3f2b1a, stop: .1 #3f2b1a, stop: .95 #3f2b1a, stop: 1 #2f2b1b);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f8c64b, stop: .1 #f8c64b, stop: .95 #f8c64b, stop: 1 #272b34);
 }
 
 QPushButton:focus {
@@ -138,7 +139,7 @@ background:#f2f2f2;
 }
 
 QComboBox:editable {
-background: #2f2b1b;
+background: #272b34;
 color:#616161;
 border:0px solid transparent;
 }
@@ -274,7 +275,7 @@ background-color:transparent;
 
 QHeaderView::section { /* Table Header Sections */
 qproperty-alignment:center;
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #2f2b1b, stop: 1 #2f2b1b);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #272b34, stop: 1 #272b34);
 color:#fff;
 min-height:25px;
 font-weight:bold;
@@ -695,7 +696,7 @@ min-width:180px;
 }
 
 QDialog#RPCConsole QWidget#tab_peers  QLabel#peerHeading { /* Peers Info Header */
-color:#2f2b1b;
+color:#272b34;
 }
 
 QDialog#RPCConsole QPushButton#openDebugLogfileButton {
@@ -805,7 +806,7 @@ margin-left:16px;
 QWidget .QFrame#frame .QLabel#labelBalanceText { /* Available Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#2f2b1b;
+background-color:#272b34;
 color:#ffffff;
 margin-right:5px;
 padding-right:5px;
@@ -816,9 +817,9 @@ min-height:35px;
 
 QWidget .QFrame#frame .QLabel#labelBalance { /* Available Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:16px;
 font-weight:bold;
-color:#2f2b1b;
+color:#cfb043;
 margin-left:0px;
 }
 
@@ -908,7 +909,7 @@ min-width: 421px;
 QWidget .QFrame#framePrivateSend .QLabel#labelPrivateSendHeader { /* PrivateSend Header */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#2f2b1b;
+background-color:#272b34;
 color:#fff;
 margin-right:5px;
 padding-right:5px;
@@ -964,7 +965,7 @@ color:#818181;
 }
 
 QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QProgressBar#privateSendProgress::chunk {
-background-color: #2f2b1b;
+background-color: #272b34;
 width:1px;
 }
 
@@ -1108,7 +1109,7 @@ background-repeat:none;
 
 QWidget .QFrame#frame_2 .QLabel#label_4 { /* Recent Transactions Label */
 min-width:180px;
-color:#3f2b1a;
+color:#f8c64b;
 margin-left:67px;
 margin-top:83px;
 margin-right:5px;
@@ -1131,7 +1132,7 @@ QWidget .QFrame#frame_2 QListView { /* Transaction List */
 font-weight:normal;
 font-size:12px;
 max-width:369px;
-color:#3f2b1a;
+color:#f8c64b;
 margin-top:12px;
 margin-left:0px; /* CSS Voodoo - set to -66px to hide default transaction icons */
 }
@@ -1179,7 +1180,7 @@ min-height:25px;
 }
 
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeatures { /* Coin Control Header */
-color:#2f2b1b;
+color:#272b34;
 font-weight:bold;
 font-size:14px;
 }
@@ -1285,7 +1286,7 @@ min-height:27px;
 QDialog#SendCoinsDialog QLabel#labelBalance {
 margin-left:0px;
 padding-left:0px;
-color:#333333;
+color:#8c763f;
 /* font-weight:bold;
 border-radius:5px;
 padding-top:20px;
@@ -1300,7 +1301,7 @@ padding-left:10px;
 /* SEND COINS ENTRY */
 
 QStackedWidget#SendCoinsEntry .QFrame#SendCoins > .QLabel { /* Send Coin Entry Labels */
-background-color:#2f2b1b;
+background-color:#272b34;
 min-width:102px;
 font-weight:bold;
 font-size:11px;
@@ -1487,7 +1488,7 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::indicator { /* Coin
 /* RECEIVE COINS */
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_2 { /* Label Label */
-background-color:#2f2b1b;
+background-color:#272b34;
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1505,7 +1506,7 @@ padding-right:5px;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_3 { /* Message Label */
-background-color:#2f2b1b;
+background-color:#272b34;
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1565,7 +1566,7 @@ border:1px solid #9e9e9e;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Requested Payments History Label */
-color:#2f2b1b;
+color:#272b34;
 font-weight:bold;
 font-size:14px;
 }
@@ -1609,12 +1610,12 @@ margin-right:1px;
 }
 
 QLabel#transactionSumLabel { /* Example of setObjectName for widgets without name */
-color:#333333;
+color:#8c763f;
 font-weight:bold;
 }
  
 QLabel#transactionSum { /* Example of setObjectName for widgets without name */
-color:#333333;
+color:#8c763f;
 }
 
 /* TRANSACTION DETAIL DIALOG */
