--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -92,7 +92,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Robot</string>
+          <string>Cryptoshock</string>
          </property>
         </widget>
        </item>
